More pages added
There are some new pages on the app.js file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="header_container"></section>
 
     <section id="page_container" class="container pageEntry">
-      <article>Loading....</article>
+      <article></article>
     </section>
 
     <section id="footer_container"></section>
